--- a/index.html
+++ b/index.html
@@ -7,23 +7,54 @@
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<title>이대겸(Mason) | 프론트엔드 개발자 포트폴리오</title>
 </head>
-<body>
-	<header>
+<body class="wrapper">
+	<header class="fixed">
+		<nav>
+			<ul>
+				<li>
+					<a class="nav-circle" href="#"></a>
+				</li>
+				<li>
+					<a class="nav-circle" href="#"></a>
+				</li>
+				<li>
+					<a class="nav-circle" href="#"></a>
+				</li>
+				<li>
+					<a class="nav-circle" href="#"></a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<section class="onepage">
 		<div class="vm-wrap">
 			<div class="vm-content">
-				<p id="changeColor" class="header-text">
-					FRONT-END DEVELOPER<br>
+				<p id="changeColor" class="main-text">
+					Front-end Developer<br>
 					Mason's Portfolio
 				</p>
 			</div>
 		</div>
-	</header>
-	<nav>
-
-	</nav>
-	<section>
+	</section>
+	<section class="onepage">
 		<article>
-
+			<h1>
+				section#1
+			</h1>
+		</article>
+	</section>
+	<section class="onepage">
+		<article>
+			<h1>
+				section#2
+			</h1>
+		</article>
+	</section>
+	<section class="onepage">
+		<article>
+			<h1>
+				section#3
+			</h1>
 		</article>
 	</section>
 	<script src="./assets/js/jquery/jquery.js"></script>
