add navigation page

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 		<nav>
 			<ul>
 				<li>
-					<a class="nav-circle" href="#"></a>
+					<a class="nav-circle" href="#first-page"></a>
 				</li>
 				<li>
-					<a class="nav-circle" href="#"></a>
+					<a class="nav-circle" href="#second-page"></a>
 				</li>
 				<li>
-					<a class="nav-circle" href="#"></a>
+					<a class="nav-circle" href="#third-page"></a>
 				</li>
 				<li>
-					<a class="nav-circle" href="#"></a>
+					<a class="nav-circle" href="#fourth-page"></a>
 				</li>
 			</ul>
 		</nav>
 	</header>
-	<section class="onepage">
+	<section id="first-page" class="onepage">
 		<div class="vm-wrap">
 			<div class="vm-content">
 				<p id="changeColor" class="main-text">
@@ -36,21 +36,21 @@
 			</div>
 		</div>
 	</section>
-	<section class="onepage">
+	<section id="second-page" class="onepage">
 		<article>
 			<h1>
 				section#1
 			</h1>
 		</article>
 	</section>
-	<section class="onepage">
+	<section id="third-page" class="onepage">
 		<article>
 			<h1>
 				section#2
 			</h1>
 		</article>
 	</section>
-	<section class="onepage">
+	<section id="fourth-page" class="onepage">
 		<article>
 			<h1>
 				section#3
