add mediaquery and reinforce navigation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>이대겸(Mason) | 프론트엔드 개발자 포트폴리오</title>
 </head>
 <body class="wrapper">
-	<header class="fixed">
+	<header class="header-location">
 		<nav>
 			<ul>
 				<li>
@@ -28,29 +28,93 @@
 	</header>
 	<section id="first-page" class="onepage">
 		<div class="vm-wrap">
-			<div class="vm-content">
+			<div class="vm-content relative">
 				<p id="changeColor" class="main-text">
 					Front-end Developer<br>
 					Mason's Portfolio
 				</p>
+				<div class="nav-arrow-wrap">
+					<a class="nav-arrow" href="#second-page">
+						<img class="i-down-arrow" src="./assets/images/down-arrow.svg" alt="down-arrow">
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
-	<section id="second-page" class="onepage">
+	<section id="second-page" class="onepage relative">
 		<article>
 			<h1>
-				section#1
+				#About Me
 			</h1>
+			<div class="px-1">
+				<div class="clear mt-2">
+					<div class="title-area">
+						<h2>
+							PROFILE
+						</h2>
+					</div>
+					<div class="content-area">
+						<p class="h3">
+							이대겸<span class="h6"> | Mason Lee</span>
+						</p>
+						<p>
+							Frontend Developer
+						</p>
+						<p>
+							1991. 12. 12
+						</p>
+						<p>
+							010-5364-7629
+						</p>
+						<p>
+							github.com/mason-lee7629
+						</p>
+					</div>
+				</div>
+				<div class="clear mt-2">
+					<div class="title-area">
+						<h4>
+							Introduce
+						</h4>
+					</div>
+					<div class="content-area">
+						<p>
+							안녕하세요. 프론트엔드 개발자 이대겸(Mason Lee)입니다.<br>
+							개발이라는 것을 접하고, 하루하루 그 매력에 빠져 살아가는 중 입니다.<br>
+							최근까지 물류 스타트업에서 근무하며 홈페이지 제작과 관련된 직무를 수행했습니다.<br>
+						</p>
+						<p class="mt-1">
+							현재는 HTML, CSS, JavaScript, jquery를 사용할 줄 알고, 이와 별개로 React, Vue 등 프레임워크에 관심이 많습니다.<br>
+							지속적인 자기개발을 통해 단계적인 발전을 이룩하고 개발이라는 분야에 전문적 인재가 되기위해 노력합니다.<br>
+							개인적으로 간단한 사이드프로젝트를 진행하며 개발에 대한 기본지식을 습득 중입니다.
+						</p>
+						<p class="mt-1">
+							또한, 미래에 있을 협업 프로젝트를 진행하는데 차질이 없기 위해 기본적인 Github의 활용법에 대해 습득했고, 물류 스타트업 재직 당시에 협업 툴 중 하나인 제플린을 이용해 협업을 진행한 경험이 있습니다.
+							현재 진행 중이고 앞으로 진행할 프로젝트는 Github를 활용해 관리하며 진행될 것입니다.
+						</p>
+					</div>
+				</div>
+				<div class="nav-arrow-wrap">
+					<a class="nav-arrow" href="#third-page">
+						<img class="i-down-arrow" src="./assets/images/down-arrow.svg" alt="down-arrow">
+					</a>
+				</div>
+			</div>
 		</article>
 	</section>
-	<section id="third-page" class="onepage">
+	<section id="third-page" class="onepage relative">
 		<article>
 			<h1>
 				section#2
 			</h1>
+			<div class="nav-arrow-wrap">
+				<a class="nav-arrow" href="#fourth-page">
+					<img class="i-down-arrow" src="./assets/images/down-arrow.svg" alt="down-arrow">
+				</a>
+			</div>
 		</article>
 	</section>
-	<section id="fourth-page" class="onepage">
+	<section id="fourth-page" class="onepage relative">
 		<article>
 			<h1>
 				section#3
